--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
                     <input type="password" name="password" placeholder="Senha" required>
                 </div>
             </div>
+
+            <div class="forgot-password">
+                <a href="/recuperar-senha">Esqueceu sua senha?</a>
+            </div>
         </form>
-     </main>
+    </main>
 
 
 </body>
