finalizaçao do html

--- a/index.html
+++ b/index.html
@@ -18,38 +18,54 @@
             <h1>Bem-vindo</h1>
             
                 <p class="subtitle">Entre com suas credenciais para acessar</p>
-                    </header>
+        </header>
 
         <form action="/login" method="POST">
             
-                <div class="form-group">
-                    <label for="Email">Email ou Usuario</label>
+                 <div class="form-group">
+                             <label for="Email">Email ou Usuario</label>
 
-                        <div class="input-group">
+                         <div class="input-group">
                              <input type="email" name="email" placeholder="Seu email ou name do usuario" required autofocus>
-                        </div>
-                </div>
+                         </div>                       
+                 </div>
+ 
+                 <div class="form-group">
+                             <label for="password">Senha</label>
 
-                <div class="form-group">
-                    <label for="password">Senha</label>
+                     <div class="input-group">
+                         <input type="password" name="password" placeholder="Senha" required>
+                     </div>
+                 </div>
 
-                    <div class="input-group">
-                        <input type="password" name="password" placeholder="Senha" required>
-                    </div>
-                </div>
-
-                <div class="forgot-password">
+                 <div class="forgot-password">
                         <a href="/recuperar-senha">Esqueceu sua senha?</a>
                 </div>
 
                 <div class="options">
                    <div class="remember-me">
                        <input type="checkbox" id="remember" name="remember">
-                      <label for="remember">lembra-me</label>
+                       <label for="remember">lembra-me</label>
                    </div>
                 </div>
                  <button type="submit">Entrar</button>
         </form>
+
+            <div class="divider">
+                  <span>Ou continue com</span> 
+            </div>
+
+            <div class="social-login">
+                <a href="#" class="social-btn" arial-label="Entrar com google">G</a>
+                <a href="#" class="social-btn" arial-label="Entrar com Facebook">f</a>
+                <a href="#" class="social-btn" arial-label="Entrar com apple">A</a>
+            </div>
+
+            <div class="singup-link">Não tem uma conta?
+                <a href="/cadastro">Criar conta</a>
+            </div>
+
+
     </main>
 
 
