--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="login, acesso, segurança, conta">
 
+    <link rel="stylesheet" href="CSS/style.css">
+
     <title>Login | Minha Plataforma</title>
 
 </head>
@@ -57,7 +59,7 @@
 
             <div class="social-login">
                 <a href="#" class="social-btn" arial-label="Entrar com google">G</a>
-                <a href="#" class="social-btn" arial-label="Entrar com Facebook">f</a>
+                <a href="#" class="social-btn" arial-label="Entrar com Facebook">F</a>
                 <a href="#" class="social-btn" arial-label="Entrar com apple">A</a>
             </div>
 
